Fixed minor at media issue and misaligned footer links

--- a/src/app/portfolio/portfolio-list/portfolio-list.component.scss
+++ b/src/app/portfolio/portfolio-list/portfolio-list.component.scss
@@ -21,7 +21,7 @@ body {
 }
 
 /* Responsive columns */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
   .column, .card  {
     width: 100%;
     display: block;
